--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "svelte": "^3.0.0",
     "ts-node": "8.3.0",
     "typescript": "3.7.5",
+    "uuid": "^7.0.2",
     "wait-on": "4.0.0",
     "webdriver-manager": "12.1.7"
   },
