--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
   },
   "devDependencies": {
     "@types/node": "12.11.1",
-    "electron": "8.0.0",
+    "electron": "^8.0.0",
     "electron-builder": "22.3.2",
     "electron-reload": "1.5.0",
     "npm-run-all": "4.1.5",
@@ -47,7 +47,6 @@
     "svelte": "^3.0.0",
     "ts-node": "8.3.0",
     "typescript": "3.7.5",
-    "uuid": "^7.0.2",
     "wait-on": "4.0.0",
     "webdriver-manager": "12.1.7"
   },
